--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{
+  title = {Pulmonary Nodule Risk Classification in Adenocarcinoma from CT Images Using Deep CNN with Scale Transfer Module},
+  author={Jie Zheng, Dawei Yang, Yu Zhu, Wanghuan Gu, Bingbing Zheng, Chunxue Bai, Lin Zhao, Hongcheng Shi, Jie Hu, Shaohua Lu, Weibin Shi, Ningfang Wang},
+  journal = {IET Image Processing},
+  year    = 2020,
+  volume  = 14,
+  number  = 8
 }
