--- a/content/publication/ahmed-2023-images/cite.bib
+++ b/content/publication/ahmed-2023-images/cite.bib
@@ -1,8 +1,9 @@
-@article{ahmed2023images,
- author = {Ahmed, Noor and Rozina and Ali, Ahmad and Raziq, Abdul},
- journal = {Multimedia Systems},
- pages = {1--14},
- publisher = {Springer},
- title = {Images denoising for COVID-19 chest X-ray based on multi-scale parallel convolutional neural network},
- year = {2023}
+@article{jiang2021images,
+  title={Images denoising for COVID-19 chest X-ray based on multi-resolution parallel residual CNN},
+  author={Jiang, Xiaoben and Zhu, Yu and Zheng, Bingbing and Yang, Dawei},
+  journal={Machine Vision and Applications},
+  volume={32},
+  pages={1--15},
+  year={2021},
+  publisher={Springer}
 }
