--- a/content/publication/cai-2023-multimodal/cite.bib
+++ b/content/publication/cai-2023-multimodal/cite.bib
@@ -1,10 +1,10 @@
 @article{cai2023multimodal,
- author = {Cai, Gan and Zhu, Yu and Wu, Yue and Jiang, Xiaoben and Ye, Jiongyao and Yang, Dawei},
- journal = {The Visual Computer},
- number = {7},
- pages = {2781--2793},
- publisher = {Springer},
- title = {A multimodal transformer to fuse images and metadata for skin disease classification},
- volume = {39},
- year = {2023}
+  title={A multimodal transformer to fuse images and metadata for skin disease classification},
+  author={Cai, Gan and Zhu, Yu and Wu, Yue and Jiang, Xiaoben and Ye, Jiongyao and Yang, Dawei},
+  journal={The Visual Computer},
+  volume={39},
+  number={7},
+  pages={2781--2793},
+  year={2023},
+  publisher={Springer}
 }
