--- a/content/publication/yu-2021-multi/cite.bib
+++ b/content/publication/yu-2021-multi/cite.bib
@@ -1,10 +1,10 @@
 @article{yu2021multi,
- author = {Yu, Fuli and Zhu, Yu and Qin, Xiangxiang and Xin, Ying and Yang, Dawei and Xu, Tao},
- journal = {IET Image Processing},
- number = {11},
- pages = {2604--2613},
- publisher = {Wiley Online Library},
- title = {A multi-class COVID-19 segmentation network with pyramid attention and edge loss in CT images},
- volume = {15},
- year = {2021}
+  title={A multi-class COVID-19 segmentation network with pyramid attention and edge loss in CT images},
+  author={Yu, Fuli and Zhu, Yu and Qin, Xiangxiang and Xin, Ying and Yang, Dawei and Xu, Tao},
+  journal={IET Image Processing},
+  volume={15},
+  number={11},
+  pages={2604--2613},
+  year={2021},
+  publisher={Wiley Online Library}
 }
