--- a/content/publication/zhufy-2022-cross/cite.bib
+++ b/content/publication/zhufy-2022-cross/cite.bib
@@ -1,9 +1,11 @@
-@article{zhu2022cross,
-  title={Cross-Domain Attention and Center Loss for Sketch Re-Identification},
+@ARTICLE{9899483,
   author={Zhu, Fengyao and Zhu, Yu and Jiang, Xiaoben and Ye, Jiongyao},
   journal={IEEE Transactions on Information Forensics and Security},
-  volume={17},
-  pages={3421--3432},
+  title={Cross-Domain Attention and Center Loss for Sketch Re-Identification},
   year={2022},
-  publisher={IEEE}
-}
+  volume={17},
+  number={},
+  pages={3421-3432},
+  keywords={Transformers;Task analysis;Face recognition;Feature extraction;Representation learning;Image color analysis;Cameras;Sketch re-identification;cross-domain attention;domain-invariant feature;center loss},
+  doi={10.1109/TIFS.2022.3208811}
+ }
